crates/native/tests/snapshots/parser_tests__mutation_with_complex_input.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(r#\"mutation CreatePost($input: PostInput!) {\n            createPost(input: $input) {\n                id\n                title\n                author { id name }\n            }\n        }\"#)"
---
Document {
    source: Source {
        code: "mutation CreatePost($input: PostInput!) {\n            createPost(input: $input) {\n                id\n                title\n                author { id name }\n            }\n        }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Operation(
                OperationDefinition {
                    span: Span {
                        start: 0,
                        end: 181,
                    },
                    operation_type: Mutation,
                    name: Some(
                        Name(
                            "CreatePost",
                        ),
                    ),
                    variable_definitions: [
                        VariableDefinition {
                            span: Span {
                                start: 20,
                                end: 39,
                            },
                            variable: VariableName(
                                Name(
                                    "input",
                                ),
                            ),
                            typ: NonNull(
                                Named(
                                    NamedType {
                                        name: TypeName(
                                            Name(
                                                "PostInput",
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                    ],
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 54,
                                        end: 171,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "createPost",
                                        ),
                                    ),
                                    arguments: [
                                        Argument {
                                            span: Span {
                                                start: 65,
                                                end: 78,
                                            },
                                            name: ArgumentName(
                                                Name(
                                                    "input",
                                                ),
                                            ),
                                            value: Variable(
                                                Name(
                                                    "input",
                                                ),
                                            ),
                                        },
                                    ],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 98,
                                                        end: 122,
                                                    },
                                                    alias: None,
                                                    name: FieldName(
                                                        Name(
                                                            "id",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 117,
                                                        end: 145,
                                                    },
                                                    alias: None,
                                                    name: FieldName(
                                                        Name(
                                                            "title",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [],
                                                    },
                                                },
                                            ),
                                            Field(
                                                Field {
                                                    span: Span {
                                                        start: 139,
                                                        end: 157,
                                                    },
                                                    alias: None,
                                                    name: FieldName(
                                                        Name(
                                                            "author",
                                                        ),
                                                    ),
                                                    arguments: [],
                                                    directives: [],
                                                    selection_set: SelectionSet {
                                                        selections: [
                                                            Field(
                                                                Field {
                                                                    span: Span {
                                                                        start: 148,
                                                                        end: 155,
                                                                    },
                                                                    alias: None,
                                                                    name: FieldName(
                                                                        Name(
                                                                            "id",
                                                                        ),
                                                                    ),
                                                                    arguments: [],
                                                                    directives: [],
                                                                    selection_set: SelectionSet {
                                                                        selections: [],
                                                                    },
                                                                },
                                                            ),
                                                            Field(
                                                                Field {
                                                                    span: Span {
                                                                        start: 151,
                                                                        end: 157,
                                                                    },
                                                                    alias: None,
                                                                    name: FieldName(
                                                                        Name(
                                                                            "name",
                                                                        ),
                                                                    ),
                                                                    arguments: [],
                                                                    directives: [],
                                                                    selection_set: SelectionSet {
                                                                        selections: [],
                                                                    },
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
