crates/native/tests/snapshots/parser_tests__named_fragment.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"fragment UserFields on User { id name email }\")"
---
Document {
    source: Source {
        code: "fragment UserFields on User { id name email }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        Executable(
            Fragment(
                FragmentDefinition {
                    span: Span {
                        start: 0,
                        end: 45,
                    },
                    name: FragmentName(
                        Name(
                            "UserFields",
                        ),
                    ),
                    variable_definitions: [],
                    type_condition: TypeName(
                        Name(
                            "User",
                        ),
                    ),
                    directives: [],
                    selection_set: SelectionSet {
                        selections: [
                            Field(
                                Field {
                                    span: Span {
                                        start: 30,
                                        end: 37,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "id",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 33,
                                        end: 43,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "name",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                            Field(
                                Field {
                                    span: Span {
                                        start: 38,
                                        end: 45,
                                    },
                                    alias: None,
                                    name: FieldName(
                                        Name(
                                            "email",
                                        ),
                                    ),
                                    arguments: [],
                                    directives: [],
                                    selection_set: SelectionSet {
                                        selections: [],
                                    },
                                },
                            ),
                        ],
                    },
                },
            ),
        ),
    ],
}
